2004-10-26 Alain Magloire
	Remove ICDIMemoryManager for ICDIMemoryBlockManagement
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIMemoryManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIMemoryBlockManagement.java

	* CDebugModel.java
	* CExtendedMemoryBlock.java
	* CFormattedMemoryBlock.java

2004-10-26 Alain Magloire
	Remove of ICDISourceManager in CDI
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISourceManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDISourceManagement.java

	* Disassembly.java

2004-10-26 Alain Magloire
	Remove of ICDISignalManager in CDI
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISignalManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThreadGroup.java

	* CSignalManager.java

2004-10-25 Mikhail Khodjaiants
	NPE in "CVlaue.isUnsigned". Check if the type of the parent variable is null.
	* CValue.java

2004-10-25 David Inglis
	Deprecated environment launch constent in favor of the constant provided by the debug.core.
	* src/org/eclipse/cdt/debug/core/ICDTLaunchConfigurationConstants.java
	
2004-10-25 Alain Magloire
	Remove of the class ICDIExpressionManager.
	instead new clas ICDIExpressionManagegment that is on the ICDITarget
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIExpression.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThreadGroup.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIExpressionManagement.java

	* CDebugModel.java
	* CDIDebugModel.java
	* CExpression.java
	* CFormattedMemoryBlock.java
	* CStackFrame.java

2004-10-22 Mikhail Khodjaiants